--- a/polocloud-modules/example-module/pom.xml
+++ b/polocloud-modules/example-module/pom.xml
@@ -3,29 +3,26 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>PoloCloud</artifactId>
-    <groupId>de.polocloud</groupId>
+    <artifactId>polocloud-modules</artifactId>
+    <groupId>de.polocloud.modules</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
 
-  <groupId>de.polocloud.modules</groupId>
-  <artifactId>polocloud-modules</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
-  <modules>
-    <module>sign-module</module>
-    <module>permissions-module</module>
-    <module>internalwrapper-module</module>
-    <module>proxy-module</module>
-    <module>example-module</module>
-  </modules>
+  <artifactId>example-module</artifactId>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
     <maven.compiler.target>8</maven.compiler.target>
   </properties>
+
+  <dependencies>
+    <dependency>
+      <groupId>de.polocloud.api</groupId>
+      <artifactId>polocloud-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 
 </project>
