--- a/polocloud-modules/permissions-module/pom.xml
+++ b/polocloud-modules/permissions-module/pom.xml
@@ -15,10 +15,20 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok-maven</artifactId>
+      <version>1.18.20.0</version>
+    </dependency>
+    <dependency>
       <groupId>de.polocloud.api</groupId>
       <artifactId>polocloud-api</artifactId>
       <version>1.0-SNAPSHOT</version>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.20</version>
     </dependency>
   </dependencies>
 
