--- a/polocloud-modules/permissions-module/pom.xml
+++ b/polocloud-modules/permissions-module/pom.xml
@@ -25,6 +25,18 @@
       <artifactId>lombok</artifactId>
       <version>1.18.20</version>
     </dependency>
+      <dependency>
+          <groupId>net.md-5</groupId>
+          <artifactId>bungeecord-api</artifactId>
+          <version>1.17-R0.1-SNAPSHOT</version>
+          <scope>compile</scope>
+      </dependency>
+    <dependency>
+      <groupId>org.spigotmc</groupId>
+      <artifactId>spigot-api</artifactId>
+      <version>1.8.8-R0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
   <properties>
