--- a/polocloud-modules/npc-module/pom.xml
+++ b/polocloud-modules/npc-module/pom.xml
@@ -32,7 +32,7 @@
           </execution>
         </executions>
         <configuration>
-          <finalName>npc</finalName>
+          <finalName>npc-module</finalName>
           <createDependencyReducedPom>false</createDependencyReducedPom>
           <shadedArtifactAttached>true</shadedArtifactAttached>
         </configuration>
