--- a/polocloud-api/pom.xml
+++ b/polocloud-api/pom.xml
@@ -85,6 +85,12 @@
           <version>2.7</version>
           <scope>compile</scope>
       </dependency>
+      <dependency>
+          <groupId>org.projectlombok</groupId>
+          <artifactId>lombok</artifactId>
+          <version>1.18.20</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
 </project>
