--- a/polocloud-api/pom.xml
+++ b/polocloud-api/pom.xml
@@ -36,12 +36,6 @@
     <!-- https://mvnrepository.com/artifact/com.google.inject/guice -->
 
     <dependency>
-      <groupId>com.google.inject</groupId>
-      <artifactId>guice</artifactId>
-      <version>5.0.1</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
       <groupId>me.tongfei</groupId>
       <artifactId>progressbar</artifactId>
       <version>0.9.2</version>
@@ -91,6 +85,12 @@
           <version>1.18.20</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>17.0</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
 
 </project>
