--- a/polocloud-modules/serverselector-module/pom.xml
+++ b/polocloud-modules/serverselector-module/pom.xml
@@ -7,24 +7,9 @@
     <groupId>de.polocloud</groupId>
     <version>1.0-SNAPSHOT</version>
   </parent>
-
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
 
-  <groupId>de.polocloud.modules</groupId>
-  <artifactId>polocloud-modules</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
-  <modules>
-    <module>sign-module</module>
-    <module>permissions-module</module>
-    <module>proxy-module</module>
-    <module>example-module</module>
-    <module>npc-module</module>
-    <module>hubcommand-module</module>
-    <module>smartproxy-module</module>
-    <module>serverselector-module</module>
-  </modules>
+  <artifactId>serverselector-module</artifactId>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
