--- a/polocloud-modules/serverselector-module/pom.xml
+++ b/polocloud-modules/serverselector-module/pom.xml
@@ -11,6 +11,26 @@
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>serverselector-module</artifactId>
+  <dependencies>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.20</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>de.polocloud.api</groupId>
+      <artifactId>polocloud-api</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.spigotmc</groupId>
+      <artifactId>spigot-api</artifactId>
+      <version>1.8.8-R0.1-SNAPSHOT</version>
+      <scope>compile</scope>
+    </dependency>
+  </dependencies>
 
   <properties>
     <maven.compiler.source>8</maven.compiler.source>
